variables.Variables.scala.error
Erreur de compilation :
Variables:2: error: not found: value i
if(!(i = estSurBiscuit)){
     ^Variables:3: error: not found: value i
  while (!i){
          ^